# QPass---A-CLI-based-password-manager-

./: .gitignore  README.md  auth.py  check_mongo.py  config.json  crud_operations.py  crypto.py  initialization.py  main.py  practice_args.py  pyproject.toml  session_configs.py  vault.py
qpass/: auth.py  cli.py  crud_operations.py  crypto.py  initialization.py  vault.py
