[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "quick-pass"
version = "0.1.0"
description = "Secure CLI-based password manager with encryption and MongoDB support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Aditya Suryawanshi" }
]

keywords = ["password-manager", "cli", "security", "encryption", "mongodb"]

dependencies = [
    "cryptography",
    "pymongo"
]


[project.scripts]
qpass = "qpass.cli:main"


[tool.setuptools]
packages = ["qpass"]